--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 EditorStartupMap=/ARPG/ARPGLevel.ARPGLevel
+GameInstanceClass=/RPGCore/Blueprints/Gameplay/GI_RPG.GI_RPG_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
