--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -45,3 +45,6 @@ bSupportsGamepad=True
 DefaultGamepadName=Windows
 bCanChangeGamepadType=True
 
+[/Script/RPGCoreRuntime.LyraUIManagerSubsystem]
+DefaultUIPolicyClass=/RPGCore/UI/B_RPGUIPolicy.B_RPGUIPolicy_C
+
