--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -17,6 +17,7 @@ InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/AdvancedGASSystem/GameplayTagDataTables/DT_Status.DT_Status
 +GameplayTagTableList=/RPGInventorySystem/DT_InventorySystem.DT_InventorySystem
 +GameplayTagTableList=/ModuleSkin/Blueprint/DT_SkinPart.DT_SkinPart
++GameplayTagTableList=/RPGCore/DT_HUD.DT_HUD
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 
