--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,6 +80,11 @@ FontDPI=72
 LocalPlayerClassName=/Script/CommonGame.CommonLocalPlayer
 GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
 +NetDriverDefinition=(DefName="IrisNetDriver",DriverClassName="/Script/IrisCore.NetDriverIris",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
+!IrisNetDriverConfigs=ClearArray
++IrisNetDriverConfigs=(NetDriverDefinition="IrisNetDriver",NetDriverName="IrisNetDriver",NetDriverWildcardName="IrisNetDriver",bEnableIris=true)
+
+[/Script/Engine.NetDriver]
++ChannelDefinitions=(ChannelName=DataStream, ClassName=/Script/Engine.DataStreamChannel, StaticChannelIndex=2, bTickOnCreate=true, bServerOpen=true, bClientOpen=true, bInitialServer=true, bInitialClient=true)
 
 [/Script/IrisCore.PartialNetObjectAttachmentHandlerConfig]
 MaxPartCount=4096
