--- a/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
+++ b/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
@@ -6,4 +6,5 @@ GameplayTagList=(Tag="InitState.InitInitialized",DevComment="")
 GameplayTagList=(Tag="InitState.InventoryReady",DevComment="")
 GameplayTagList=(Tag="InitState.Ready",DevComment="")
 GameplayTagList=(Tag="InitState.Spawn",DevComment="")
+GameplayTagList=(Tag="RPG.Equipment.Message.ShowWeapon",DevComment="")
 
