--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -44,6 +44,8 @@ bSupportsTouch=False
 bSupportsGamepad=True
 DefaultGamepadName=Windows
 bCanChangeGamepadType=True
++ControllerData=/Game/Input/KBControllerData.KBControllerData_C
++ControllerData=/Game/Input/GPControllerData.GPControllerData_C
 
 [/Script/RPGCoreRuntime.LyraUIManagerSubsystem]
 DefaultUIPolicyClass=/RPGCore/UI/B_RPGUIPolicy.B_RPGUIPolicy_C
