--- a/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
+++ b/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
@@ -1,4 +1,7 @@
 [/Script/GameplayTags.GameplayTagsList]
+GameplayTagList=(Tag="GameplayEvent.Consume.Equip",DevComment="")
+GameplayTagList=(Tag="GameplayEvent.Consume.Exp",DevComment="")
+GameplayTagList=(Tag="GameplayEvent.Consume.Item",DevComment="")
 GameplayTagList=(Tag="InitState.AbilityReady",DevComment="")
 GameplayTagList=(Tag="InitState.DataAvailable",DevComment="")
 GameplayTagList=(Tag="InitState.EquipmentReady",DevComment="")
@@ -6,5 +9,6 @@ GameplayTagList=(Tag="InitState.InitInitialized",DevComment="")
 GameplayTagList=(Tag="InitState.InventoryReady",DevComment="")
 GameplayTagList=(Tag="InitState.Ready",DevComment="")
 GameplayTagList=(Tag="InitState.Spawn",DevComment="")
+GameplayTagList=(Tag="InitState.UI",DevComment="")
 GameplayTagList=(Tag="RPG.Equipment.Message.ShowWeapon",DevComment="")
 
