--- a/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
+++ b/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
@@ -1,4 +1,5 @@
 [/Script/GameplayTags.GameplayTagsList]
+GameplayTagList=(Tag="Ability.Action.Tap",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Equip",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Exp",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Item",DevComment="")
@@ -10,5 +11,6 @@ GameplayTagList=(Tag="InitState.InventoryReady",DevComment="")
 GameplayTagList=(Tag="InitState.Ready",DevComment="")
 GameplayTagList=(Tag="InitState.Spawn",DevComment="")
 GameplayTagList=(Tag="InitState.UI",DevComment="")
+GameplayTagList=(Tag="InputTag.Tap",DevComment="")
 GameplayTagList=(Tag="RPG.Equipment.Message.ShowWeapon",DevComment="")
 
