--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -95,3 +95,7 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 
+[/Script/EnhancedInput.EnhancedInputDeveloperSettings]
+bEnableUserSettings=True
+UserSettingsClass=/Script/GeneralSystemSetting.GeneralEnhancedInputUserSettings
+
