--- a/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
+++ b/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
@@ -1,5 +1,6 @@
 [/Script/GameplayTags.GameplayTagsList]
 GameplayTagList=(Tag="Ability.Action.Tap",DevComment="")
+GameplayTagList=(Tag="Gameplay.Inventory.StackAdd",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Equip",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Exp",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Item",DevComment="")
