--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -209,3 +209,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.GarbageCollectionSettings]
+gc.GarbageEliminationEnabled=True
+
