--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -26,9 +26,9 @@ GlobalGameplayCueManagerClass=/Script/AdvancedGASSystem.RPGGameplayCueManager
 GameFeaturesManagerClassName=/Script/AdvancedGASSystem.RPGGameFeaturePolicy
 
 [/Script/GeneralSystemSetting.GeneralSettings]
-SaveGameClass=/ARPG/B_Save_ARPG.B_Save_ARPG_C
+SaveGameClass=/RPGCore/Blueprints/B_Save.B_Save_C
 UserSoundMix=/GeneralSystemSetting/Demo/SoundMix.SoundMix
-SaveDataClass=/ARPG/B_Save_ARPG.B_Save_ARPG_C
+SaveDataClass=/RPGCore/Blueprints/B_Save.B_Save_C
 
 [/Script/CommonLoadingScreen.CommonLoadingScreenSettings]
 LoadingScreenWidget=/RPGCore/W_Loading.W_Loading_C
