--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -212,3 +212,6 @@ ManualIPAddress=
 [/Script/Engine.GarbageCollectionSettings]
 gc.GarbageEliminationEnabled=True
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bGenerateNavigationOnlyAroundNavigationInvokers=True
+
