--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -188,8 +188,9 @@ ManualIPAddress=
 +Profiles=(Name="Interact",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="TraceChannel_Weapon")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="TraceChannel_Weapon_Capsule")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="TraceChannel_Damage")
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="TraceChannel_Weapon_Capsule")))
-+EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="TraceChannel_Weapon")))
++EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="TraceChannel_Weapon"),(Channel="TraceChannel_Damage")))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
