--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -21,6 +21,8 @@ MetaDataTagsForAssetRegistry=()
 
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 GlobalGameplayCueManagerClass=/Script/AdvancedGASSystem.RPGGameplayCueManager
+bUseDebugTargetFromHud=True
+AbilitySystemGlobalsClassName=/Script/AdvancedGASSystem.RPGAbilitySystemGlobals
 
 [/Script/GameFeatures.GameFeaturesSubsystemSettings]
 GameFeaturesManagerClassName=/Script/AdvancedGASSystem.RPGGameFeaturePolicy
