--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -18,6 +18,7 @@ InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/RPGInventorySystem/DT_InventorySystem.DT_InventorySystem
 +GameplayTagTableList=/ModuleSkin/Blueprint/DT_SkinPart.DT_SkinPart
 +GameplayTagTableList=/RPGCore/DT_HUD.DT_HUD
++GameplayTagTableList=/AdvancedGASSystem/GameplayTagDataTables/DT_StateTree.DT_StateTree
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 
