--- a/Plugins/GameFeatures/RPGCore/RPGCore.uplugin
+++ b/Plugins/GameFeatures/RPGCore/RPGCore.uplugin
@@ -64,6 +64,18 @@
 		{
 			"Name": "GeneralSystemSetting",
 			"Enabled": true
+		},
+		{
+			"Name": "MassEntity",
+			"Enabled": true
+		},
+		{
+			"Name": "MassGameplay",
+			"Enabled": true
+		},
+		{
+			"Name": "MassAI",
+			"Enabled": true
 		}
 	]
 }
