--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -19,6 +19,7 @@ InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/ModuleSkin/Blueprint/DT_SkinPart.DT_SkinPart
 +GameplayTagTableList=/RPGCore/DT_HUD.DT_HUD
 +GameplayTagTableList=/AdvancedGASSystem/GameplayTagDataTables/DT_StateTree.DT_StateTree
++GameplayTagTableList=/AdvancedGASSystem/GameplayTagDataTables/DT_Effect.DT_Effect
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 
