--- a/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
+++ b/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
@@ -3,6 +3,11 @@ GameplayTagList=(Tag="Ability.Action.Consume",DevComment="")
 GameplayTagList=(Tag="Ability.Action.Discover",DevComment="")
 GameplayTagList=(Tag="Ability.Action.Tap",DevComment="")
 GameplayTagList=(Tag="Gameplay.Inventory.StackAdd",DevComment="")
+GameplayTagList=(Tag="GameplayCue.AOE.Gravity",DevComment="")
+GameplayTagList=(Tag="GameplayCue.AOE.Squal",DevComment="")
+GameplayTagList=(Tag="GameplayCue.Projectile.Bow",DevComment="")
+GameplayTagList=(Tag="GameplayCue.Shatter",DevComment="")
+GameplayTagList=(Tag="GameplayCue.Trails.Combo",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Equip",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Exp",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Item",DevComment="")
