--- a/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
+++ b/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
@@ -5,6 +5,8 @@ GameplayTagList=(Tag="Ability.Action.Tap",DevComment="")
 GameplayTagList=(Tag="Gameplay.Inventory.StackAdd",DevComment="")
 GameplayTagList=(Tag="GameplayCue.AOE.Gravity",DevComment="")
 GameplayTagList=(Tag="GameplayCue.AOE.Squal",DevComment="")
+GameplayTagList=(Tag="GameplayCue.Energy",DevComment="")
+GameplayTagList=(Tag="GameplayCue.Energy.Aim.Arrow",DevComment="")
 GameplayTagList=(Tag="GameplayCue.FX.Trail",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Impact.Projectile.Arrow",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Impact.Projectile.Great",DevComment="")
@@ -15,6 +17,7 @@ GameplayTagList=(Tag="GameplayEvent.Consume.Equip",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Exp",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Item",DevComment="")
 GameplayTagList=(Tag="InitState.AbilityReady",DevComment="")
+GameplayTagList=(Tag="InitState.AddAttribute",DevComment="")
 GameplayTagList=(Tag="InitState.DataAvailable",DevComment="")
 GameplayTagList=(Tag="InitState.EquipmentReady",DevComment="")
 GameplayTagList=(Tag="InitState.InitInitialized",DevComment="")
