--- a/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
+++ b/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
@@ -13,6 +13,8 @@ GameplayTagList=(Tag="GameplayCue.Impact.Projectile.Arrow",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Impact.Projectile.Great",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Projectile.Bow",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Shatter",DevComment="")
+GameplayTagList=(Tag="GameplayCue.Sound.Arrow.Shoot",DevComment="")
+GameplayTagList=(Tag="GameplayCue.Sound.Sword.Swing",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Trails.Combo",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Equip",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.Consume.Exp",DevComment="")
