--- a/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
+++ b/Plugins/GameFeatures/RPGCore/Config/Tags/RPGCore.ini
@@ -1,4 +1,5 @@
 [/Script/GameplayTags.GameplayTagsList]
+GameplayTagList=(Tag="Ability.Action.Aim",DevComment="")
 GameplayTagList=(Tag="Ability.Action.Consume",DevComment="")
 GameplayTagList=(Tag="Ability.Action.Discover",DevComment="")
 GameplayTagList=(Tag="Ability.Action.Executed",DevComment="")
@@ -15,6 +16,7 @@ GameplayTagList=(Tag="GameplayCue.FX.Trail",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Impact.Projectile.Arrow",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Impact.Projectile.Great",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Projectile.Bow",DevComment="")
+GameplayTagList=(Tag="GameplayCue.RPG.Mana",DevComment="")
 GameplayTagList=(Tag="GameplayCue.ShakeBone",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Shatter",DevComment="")
 GameplayTagList=(Tag="GameplayCue.Sound.Arrow.Shoot",DevComment="")
